<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Blood Donor Widget</string>
    <string name="select_blood_type">Select Your Blood Type</string>
    <string name="blood_type_a_plus">A+</string>
    <string name="blood_type_a_minus">A-</string>
    <string name="blood_type_b_plus">B+</string>
    <string name="blood_type_b_minus">B-</string>
    <string name="blood_type_ab_plus">AB+</string>
    <string name="blood_type_ab_minus">AB-</string>
    <string name="blood_type_o_plus">O+</string>
    <string name="blood_type_o_minus">O-</string>
    <string name="save">Save</string>
    <string name="widget_loading">Loading...</string>
    <string name="widget_error">Error</string>
</resources>
